# idle-game

./: Cargo.toml  README.md  default.nix
src/: main.rs
