[package]
name = "idle-game"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# Fixes for libudev being merged into systemd but deps still depend on libudev.


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }

